# api-resume

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  sqlite.db
migrations/: 20230926025319_contact-info.down.sql  20230926025319_contact-info.up.sql  20230926025319_resume-overview.down.sql  20230926025319_resume-overview.up.sql  20230926160459_contact-info.down.sql  20230926160459_contact-info.up.sql  20230926160516_skill-group.down.sql  20230926160516_skill-group.up.sql  20230926160519_skill.down.sql  20230926160519_skill.up.sql  20230926160529_previous-position.down.sql  20230926160529_previous-position.up.sql  20230926160544_previous-position-achievement.down.sql  20230926160544_previous-position-achievement.up.sql  20230926161049_education.down.sql  20230926161049_education.up.sql  20230926171934_resume-seeder.down.sql  20230926171934_resume-seeder.up.sql
src/: lib.rs  main.rs  prelude.rs
src/action/: api_v1.rs  api_v1_factory.rs
src/api/: api_v1.rs  config.rs  mod.rs  prelude.rs  static_handlers.rs
src/api/action/: api_v1.rs  api_v1_factory.rs  mod.rs
src/api/domain/: contact_info.rs  education.rs  experience.rs  mod.rs  overview.rs  skills.rs
src/api/render/: contact_info.rs  education.rs  experience.rs  mod.rs  overview.rs  skills.rs
src/domain/: contact_info.rs  experience.rs  mod.rs  overview.rs
src/render/: contact_info.rs  experience.rs  mod.rs  overview.rs
static/: index.html
