[package]
name = "dennis-lawter-api-resume"
version = "0.1.0"
edition = "2021"
authors = ["Dennis Lawter <dennis.lawter@gmail.com>"]

[lib]
name = "dennis_lawter_resume_api_library"
path = "src/lib.rs"

[[bin]]
name = "dennis_lawter_resume_api_server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.73"
color-eyre = "0.6.2"
dotenv = "0.15.0"
poem = "1.3.58"
poem-openapi = { version = "3", features = ["swagger-ui"] }
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.4.1"
